--- a/src/index.html
+++ b/src/index.html
@@ -3,7 +3,7 @@
 
 <head>
   <meta charset=" utf-8">
-  <title>ShareStoryApp</title>
+  <title>S Community</title>
   <base href="/">
   <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no">
   <link rel="icon" type="image/x-icon" href="https://tecdn.b-cdn.net/img/logo/te-transparent-noshadows.webp">
